optimazing images, adding hero img and more ids,cleaning

--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -26,7 +26,7 @@
             <h1>Argentine Chamber of Commerce</h1>
         </div>
         <nav>
-            <ul id="primaryNav">
+            <ul id="primary-nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="directory.html">Directory</a></li>
@@ -42,11 +42,11 @@
             <a href="https://www.linkedin.com/in/josuebcenturion/" target="_blank"><img
                     src="/wdd230/chamber/images/linkedin.png" alt="Linkedin icon"></a>
         </div>
-        <div class="btn"> <button id="hamburgerBtn"><span>&#9776;</span><span>x</span></button></div>
+        <div class="btn"> <button id="hamburger-btn"><span>&#9776;</span><span>x</span></button></div>
         <div class="current-date">
             <p><span id="banner">Welcome, Thank you for visiting Us! </span><span class="visits"></span></p>
         </div>
-        <div id="myDIV">
+        <div id="meeting-message">
             <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
             <i onclick="myFunction()">❌</i>
         </div>
@@ -96,7 +96,7 @@
                 </textarea></label>
                         <input type="hidden" name="date" id="date">
                     </fieldset>
-                    <label><input type="submit" name="submitBtn" value="Send my Message" class="submitBtn"></label>
+                    <label><input type="submit" name="submitBtn" value="Send my Message" class="submit-btn"></label>
                 </form>
             </div>
         </main>
