--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -36,7 +36,7 @@
              <h1>Argentine Chamber of Commerce</h1>
          </div>
         <nav>
-            <ul id="primaryNav">
+            <ul id="primary-nav">
                 <li ><a href="index.html">Home</a></li>
                 <li ><a href="discover.html">Discover</a></li>
                 <li ><a href="directory.html">Directory</a></li>
@@ -52,11 +52,11 @@
             <a href="https://www.linkedin.com/in/josuebcenturion/" target="_blank"><img
                     src="/wdd230/chamber/images/linkedin.png" alt="Linkedin icon"></a>
         </div>
-        <div class="btn"> <button id="hamburgerBtn"><span>&#9776;</span><span>x</span></button></div>
+        <div class="btn"> <button id="hamburger-btn"><span>&#9776;</span><span>x</span></button></div>
         <div class="current-date">
             <p><span id="banner">Welcome, Thank you for visiting Us! </span><span class="visits"></span></p>
         </div>
-        <div id="myDIV">
+        <div id="meeting-message">
             <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
             <i onclick="myFunction()">❌</i>
         </div>
@@ -67,7 +67,7 @@
         <p id="success-msg">Application Successfully Submitted</p>           
         <h1 id="message">Thanks for Applying</h1>
         <p id="information">We will let you know our decision. We <strong> highly appreciate your interest</strong>  </p>
-      <button class="submitBtn"  onclick="window.location.href='https://josuebce.github.io/wdd230/chamber/index.html';" > Go back Home </button> 
+      <button class="submit-btn"  onclick="window.location.href='https://josuebce.github.io/wdd230/chamber/index.html';" > Go back Home </button> 
     </div>
     </main>
 
