--- a/lesson-8/form/Form-start/index.html
+++ b/lesson-8/form/Form-start/index.html
@@ -93,7 +93,7 @@
                 </label>
                 <labe class="top">How Many Authors<input type="number" name="authors" ></label>
             </fieldset>
-            <input type="submit" value="Propose My Course" class="submitBtn">
+            <input type="submit" value="Propose My Course" class="submit-btn">
         </form>
     </main>
 
