--- a/lesson4/start-navigation/index.html
+++ b/lesson4/start-navigation/index.html
@@ -39,7 +39,7 @@
     
 <!-- NAVIGATION HERE -->
     <nav>
-        <ul id="primaryNav">
+        <ul id="primary-nav">
             <li><a href="#">Home</a></li>
             <li class="active"><a href="#">Products</a></li>
             <li><a href="#">Location</a></li>
