adding images and specific information

--- a/lesson-12/wireframe.html
+++ b/lesson-12/wireframe.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/wdd230/lesson-12/styles/medium.css">
     <link rel="stylesheet" href="/wdd230/lesson-12/styles/large.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="icon" href="/wdd230/lesson-12/f_s_favicon.ico">    
+    <link rel="icon" href="/wdd230/lesson-12/f_s_favicon.ico">
     <title>Argentine Chamber of Commerce</title>
 </head>
 
@@ -19,7 +19,8 @@
     <header>
         <img src="/wdd230/lesson-12/images/logo.png" href="index.html" alt="Chamber logo">
         <div class="name">
-            <h1>Fruit's Sweet</h1>        </div>
+            <h1>Bountiful Foods</h1>
+        </div>
     </header>
     <nav>
         <div><a href="index.html">Home</a></div>
@@ -29,25 +30,13 @@
         <div><a href="wireframe.html">Wireframe Sketches</a></div>
     </nav>
     <main>
-        <h2>Purpose</h2>
-        <h3>1)Provide business contacts, 2) Acquire customer referrals, 3) Bring credibility to businesses, 4)Bring
-            Networking opportunities</h3>
-        <h4>Provide business contacts</h4>
-        <p>For any business is essential to create connections with potential customers and promoters. It's a
-            bidimensional benefit to get to know through an online community.</p>
-        <h4>Adquire Customers Referrals</h4>
-        <p>For any business is essential to create connections with potential customers and promoters. It's a
-            bidimensional benefit to get to know through an online community.</p>
-        <h4>Bring credibility to businesses</h4>
-        <p>None usually will buy products from suspicious places. The Customers need the assurance of quality and
-            branding of what they are consuming, that's how this kind of places provide the perfect opportunity to get
-            more people to know your bussiness</p>
-        <h4>Bring Networking opportunities</h4>
-        <p>We are social beings, and it's key to creating strong chains of support and fidelity in customers to work
-            through networking. More people means more opportunities to innovate, reinvent and strengthen your business'
-            status in the community. </p>
-        <h2>Domain</h2>
-        <p>www.argchamber.org</p>
+        <h2>Large View</h2>
+        <div class="wireframe"><img src="/wdd230/lesson-12/images/large_view.jpg" alt=""></div>
+        <h2>Medium View</h2>
+        <div class="wireframe"><img src="/wdd230/lesson-12/images/medium_view.jpg" alt=""></div>
+        <h2>Small View</h2>
+        <div class="wireframe"><img src="/wdd230/lesson-12/images/small_view.jpg" alt=""></div>
+       
     </main>
     <footer>
         &copy;<span id="year"></span>|Josue B. Centurion|Argentina
