--- a/lesson-12/color-shceme.html
+++ b/lesson-12/color-shceme.html
@@ -18,7 +18,7 @@
     <header>
         <img src="/wdd230/lesson-12/images/logo.png" href="index.html" alt="Chamber logo">
         <div class="name">
-            <h1>Fruit's Sweet</h1>        </div>
+             <h1>Bountiful Foods</h1>        </div>
     </header>
     <nav>
         <div><a href="index.html">Home</a></div>
