--- a/lesson-12/index.html
+++ b/lesson-12/index.html
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="/wdd230/lesson-12/styles/large.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="icon" href="/wdd230/lesson-12/f_s_favicon.ico">
-    <title>Argentine Chamber of Commerce</title>
+    <title>Bountiful Foods</title>
 </head>
 
 <body>
     <header>
         <img src="/wdd230/lesson-12/images/logo.png" href="index.html" alt="Chamber logo">
         <div class="name">
-            <h1> The Fruit's Sweet</h1>
+            <h1>Bountiful Foods</h1>
         </div>
     </header>
     <nav>
@@ -31,24 +31,22 @@
     </nav>
     <main>
         <h2>Purpose</h2>
-        <h3>1)Provide business contacts, 2) Acquire customer referrals, 3) Bring credibility to businesses, 4)Bring
-            Networking opportunities</h3>
-        <h4>Provide business contacts</h4>
-        <p>For any business is essential to create connections with potential customers and promoters. It's a
-            bidimensional benefit to get to know through an online community.</p>
-        <h4>Adquire Customers Referrals</h4>
-        <p>For any business is essential to create connections with potential customers and promoters. It's a
-            bidimensional benefit to get to know through an online community.</p>
-        <h4>Bring credibility to businesses</h4>
-        <p>None usually will buy products from suspicious places. The Customers need the assurance of quality and
-            branding of what they are consuming, that's how this kind of places provide the perfect opportunity to get
-            more people to know your bussiness</p>
-        <h4>Bring Networking opportunities</h4>
-        <p>We are social beings, and it's key to creating strong chains of support and fidelity in customers to work
-            through networking. More people means more opportunities to innovate, reinvent and strengthen your business'
-            status in the community. </p>
+        <h3>1) Provide fresh and healthy food options (including organic), <br> 2) Special attention made to order
+            (fruit drinks and fruit bags), <br> 3) Distribuite Our products to the local population and to tourists
+            visiting the coastal areas.</h3>
+        <h4>Provide fresh and healthy food options</h4>
+        <p>The company sells fruits and produce directly from the farmers in the area. Being a quality assurance of the
+            products with nutrients and special Fertility treatment</p>
+        <h4>Special attention made to order (fruit drinks and fruit bags)</h4>
+        <p>Our working policy is to B2B and B2C. Having a special customer service system to match the necessities of
+            our clients. Although we are supplying businesses across the Region, we pay special attention to our
+            clients, offering a service of excellence. </p>
+        <h4>Distribuite Our products to the local population and to tourists visiting the coastal areas.</h4>
+        <p>Our successful trajectory in the past few years offering a service and products of excellence has given us as
+            consequence clients across this region and the special attention of tourists. We strive to achieve our
+            clients expectations assuring the fastest delivering time to all our clients.</p>
         <h2>Domain</h2>
-        <p>www.argchamber.org</p>
+        <p>www.bountifrut.org</p>
     </main>
     <footer>
         &copy;<span id="year"></span>|Josue B. Centurion|Argentina
