--- a/lesson-12/target-audience.html
+++ b/lesson-12/target-audience.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="This website is a site-plan for a Chamber of Commerce called Let's Chamber. It includes the styles, typography and colors that will be included in this project. It also includes the Purpose and target-audience for this website." />
-        <link rel="stylesheet" href="/wdd230/lesson-12/styles/small.css">
-        <link rel="stylesheet" href="/wdd230/lesson-12/styles/medium.css">
-        <link rel="stylesheet" href="/wdd230/lesson-12/styles/large.css">
+    <link rel="stylesheet" href="/wdd230/lesson-12/styles/small.css">
+    <link rel="stylesheet" href="/wdd230/lesson-12/styles/medium.css">
+    <link rel="stylesheet" href="/wdd230/lesson-12/styles/large.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="icon" href="/wdd230/lesson-12/f_s_favicon.ico">    
+    <link rel="icon" href="/wdd230/lesson-12/f_s_favicon.ico">
     <title>Argentine Chamber of Commerce</title>
 </head>
 
@@ -19,7 +19,8 @@
     <header>
         <img src="/wdd230/lesson-12/images/logo.png" href="index.html" alt="Chamber logo">
         <div class="name">
-            <h1>Fruit's Sweet</h1>        </div>
+            <h1>Bountiful Foods</h1>
+        </div>
     </header>
     <nav>
         <div><a href="index.html">Home</a></div>
@@ -30,59 +31,59 @@
     </nav>
     <main>
         <h2>Target Audience</h2>
-        <h3>Small businesses, their affiliates, and potential customers</h3>
+        <h3>Small and Medium size businesses, Local customers and Tourist potential customers</h3>
         <h4>Personas</h4>
         <div class="personas">
             <h5>Persona 1</h5>
-            <img src="/wdd230/lesson3/images/person_1.jpg" alt="">
+            <img src="/wdd230/lesson-12/images/persona_1.webp" alt="">
             <ul>
-                <li><strong> Name: </strong> Stuart Edward</li>
+                <li><strong> Name: </strong> Susan Marly</li>
                 <li><strong>Age:</strong> 35 </li>
-                <li><strong>Schooling:</strong> Bachelor's Degree in Business </li>
-                <li><strong>Social Status:</strong> Single, 2 Children</li>
-                <li><strong>Job title/Profession:</strong> Project Manager (New Entrepreneur)</li>
+                <li><strong>Schooling:</strong> Associate's Degree in Education </li>
+                <li><strong>Social Status:</strong> Happily Married, 3 Children</li>
+                <li><strong>Job title/Profession:</strong> Housewife </li>
             </ul>
             <div class="description">
                 <p><strong>Visiting Purpose ( Website ) </strong></p>
-                <p>Talking with some friends, He heard about the "diamond shack" event. He wants to know the details of
-                    the event to be prepared. </p>
+                <p>Raising a family is not an easy job. She likes to eat healthy food, but sometimes is hard to take the
+                    time to choose the right option being in the market with 3 little children.</p>
                 <p><strong>Quote:</strong></p>
-                <p>What kind of material will be reviewed in the meeting? What could be my goal to expand my career and
-                    contribute to the Chamber? How people will be dressed?</p>
+                <p>Can I choose from this website what I'm going to buy? Has this place the right price for my family's
+                    economy?</p>
 
             </div>
             <hr>
             <h5>Persona 2</h5>
-            <img src="/wdd230/lesson3/images/person_2.jpg" alt="">
+            <img src="/wdd230/lesson-12/images/persona_2.webp" alt="">
             <ul>
-                <li><strong> Name: </strong> Bradley Cooper</li>
+                <li><strong> Name: </strong> William Bingham </li>
                 <li><strong>Age:</strong> 25 </li>
                 <li><strong>Schooling:</strong> Associate's Degree in Communication </li>
-                <li><strong>Social Status:</strong> Married, 1 Child</li>
-                <li><strong>Job title/Profession:</strong> Marketing Representative (Small Business) </li>
+                <li><strong>Social Status:</strong> Single, 2 Children</li>
+                <li><strong>Job title/Profession:</strong> Communication Coordinator (Small Business) </li>
             </ul>
             <div class="description">
                 <p><strong>Visiting Purpose ( Website ) </strong></p>
-                <p>He wants to understand more about this online community. Get information about the resources this
-                    community offers. His Final intention is to join the Chamber. </p>
+                <p>Being a successful professional is busy and requires keeping a healthy living and continual balance
+                    in a stressful workplace. Having to raise 2 Children alone requires providing the family with
+                    healthy food and nutrients,but not having too much time to go to the market.</p>
                 <p><strong>Quote:</strong></p>
-                <p>Is it worth to join this community? What contribution can I offer to the Chamber? </p>
+                <p>I want my family to eat healthy fruit but I'm not finding the right quality products. Does this
+                    website have a catalog or some pictures of their products? Is there a way to buy the products online
+                    and receive them through a delivery service? </p>
             </div>
         </div>
         <!--         <p>Potential customers or prospective, male or female, ages 20-65 interested in knowing about Chamber
             benefits </p> -->
         <!--         <p>General Person, male or female, ages 20-65 interested in knowing about Chamber benefits for the community</p> -->
         <h4>Scenarios</h4>
-        <p><strong>1)</strong> A business owner is a new member of the community who desires to know about the resources
-            available in the chamber, then visits the discover page. </p>
-        <p><strong>2)</strong> Someone wanting to be part of the Chamber, clicks on the join section and completes the form with
-            his personal information.</p>
-        <p><strong>3)</strong> A bussiness owner looking for the news in this community, will click in the event section
-            in the home page.Looking for "more info..."</p>
-        <p><strong>4)</strong> A Entrepreneur interested in adding value to the community, will visit the contact page, with a subject
-            referring to his potential contribution. </p>
-        <p><strong>5)</strong> A business owner interested in knowing more about businesses part of the chamber of commerce, will go to
-            the directory section and review the businesses that appear. </p>
+        <p><strong>1)</strong> A Housewife trying to find the right products for her children at the right price. </p>
+        <p><strong>2)</strong> A man trying to save more time and energy buying their food through an online store
+            .</p>
+        <p><strong>3)</strong>  Someone looking for the fruits of the current season, to see what will be on the menu for the next week. </p>
+        <p><strong>4)</strong>  Small and medium-sized businesses looking for a complete distribution service and the right
+            products</p>
+        <p><strong>5)</strong> Tourists looking for tasting the typical fruits of the season of the place that they are going to visit in the next summer vacation.</p>
 
     </main>
     <footer>
