--- a/lesson-12/typography.html
+++ b/lesson-12/typography.html
@@ -19,7 +19,7 @@
     <header>
         <img src="/wdd230/lesson-12/images/logo.png" href="index.html" alt="Chamber logo">
         <div class="name">
-            <h1>Fruit's Sweet</h1>        </div>
+             <h1>Bountiful Foods</h1>        </div>
     </header>
     <nav>
         <div><a href="index.html">Home</a></div>
@@ -80,7 +80,7 @@
         <br>
         <h4>FONTS: <br> <strong>Roboto Mono</strong> </h4>
         <br>
-        <h1>(Chamber's name)</h1>
+        <h1>(Ecommerce's Name)</h1>
         <p id="pri-nav">(Primary Navigation Prototype)</p>
         <h2>Subtitle example</h2>
         <h3>Description of the main section example</h3>
