order, processing input, order and calculations

--- a/lesson-12/color-shceme.html
+++ b/lesson-12/color-shceme.html
@@ -29,7 +29,7 @@
     </nav>
     <main class="color-sch-main">
         <h2>Color Scheme</h2>
-        <h3>These are the carefull selected elements for each color in the Argentine Chamber of Commerce Website</h3>
+        <h3>These are the carefully selected elements for each color in the Bountiful Foods Store. The colors were selected to combine with nature and the color of the earth.</h3>
         <table>
             <tr>
                 <th>Site Element</th>
