--- a/lesson-12/typography.html
+++ b/lesson-12/typography.html
@@ -30,8 +30,7 @@
     </nav>
     <main class="color-sch-main">
         <h2>Typography</h2>
-        <h3>These fonts are applied with the purpose of showing proffessionality and a formal style for the Chamber of
-            Commerce.</h3>
+        <h3>These fonts are applied to show a friendly appearance for presenting the products, based on a familiar focus. Giving a warm welcome to select Healthy Food.</h3>
         <table>
             <tr>
                 <th>Site Element</th>
@@ -78,13 +77,25 @@
             </tr>
         </table>
         <br>
-        <h4>FONTS: <br> <strong>Roboto Mono</strong> </h4>
+        <h4>FONTS: <br> <strong>Roboto Mono, Open Sans, sans</strong> </h4>
         <br>
-        <h1>(Ecommerce's Name)</h1>
-        <p id="pri-nav">(Primary Navigation Prototype)</p>
+        <h1>(Store's Name)</h1>
+        <br>
+        <br>
+        <nav>
+            <div><a href="index.html">Home</a></div>
+            <div><a href="target-audience.html">Fresh</a></div>
+            <div><a href="color-shceme.html">About Us</a></div>
+      
+        </nav>
+        <br>
+        <br>
         <h2>Subtitle example</h2>
+        <br>
         <h3>Description of the main section example</h3>
+        
         <p>This is how a normal paragraph in this page will be displayed</p>
+        <br>
         <p id="p-footer">This is how the footer and some distintive paragraph will be displayed</p>
     </main>
     <footer>
