styling and ading cancel functionality and more

--- a/bountiful_foods/index.html
+++ b/bountiful_foods/index.html
@@ -47,7 +47,7 @@
             <p><span id="banner">Welcome, Thank you for visiting Us!<span class="visits"></span></span></p>
         </div>
         <div id="meeting-message">
-            <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
+            <p>🍹🍊 Come and Join our online fans community and find fruits Bountiful</p>
             <i onclick="myFunction()">❌</i>
         </div>
     </header>
@@ -56,8 +56,7 @@
             <div class="welcome-message">
                 <h2>Welcome, We're Bountiful Foods </h2>
             </div>
-            <div class="join-btn"
-                onclick="window.location.href='https://josuebce.github.io/wdd230/chamber/fresh.html';">
+            <div class="join-btn" onclick="window.location.href='fresh.html';">
                 <h2>Make your Drink Mix</h2>
             </div>
             <picture>
@@ -76,10 +75,7 @@
                 <h2>lorem ipsum dolor sit</h2>
                 <p>orem ipsum dolor sit amet consectetur
                     Ornare metus accumsan integer fermentum justo blandit conubia molestie duis torquent pharetra
-                    lobortis dictum, eleifend primis donec euismod cursus diam ultricies rutrum tortor cum posuere
-                    pulvinar. Ut euismod quis pra
-                    orem ipsum dolor sit amet consectetur
-                    Ornare metus accumsan integer fermentum justo blandit.
+                    lobortis dictum, eleifend primis donec euismod.
                 </p>
             </div>
             <picture>
@@ -90,31 +86,32 @@
             </picture>
         </section>
         <section class="weather-section">
-            <!-- Keeps Placeholders for the Weather Information -->
-            <h2>Weather</h2>
-            <div class="weather">
-                <img id="weather-img">
-                <div class="temp"><span id="my-temp"></span></div>
+            <div class="current-weather">
+                <h2> Current Weather</h2>
+                <div class="weather">
+                    <img id="weather-img">
+                    <div class="temp"><span id="my-temp"></span></div>
+                </div>
+                <h4 id="weather-descrip"></h4>
+                <div class="weather-wind">
+                    <p>Wind Speed: <span id="my-wind"></span></p>
+                    <p>Wind Chill: <span id="wind-chill"></span></p>
+                </div>
+                <p>Humidity: <span id="humidity"></span></p>
             </div>
-            <h4 id="weather-descrip"></h4>
-            <p>Wind Speed: <span id="my-wind"></span></p>
-            <p>Wind Chill: <span id="wind-chill"></span></p>
-            <p>Humidity: <span id="humidity"></span></p>
             <div id="forecast">
-                
+
             </div>
         </section>
-        <section class="weather-section">
-            <!-- Keeps Placeholders for the Weather Information -->
-            <h2>Weather</h2>
+        <section class="orders-card">
+
+            <h2>Your Orders</h2>
+
             <div class="weather">
-                <img id="weather-img">
-                <div class="temp"><span id="my-temp"></span></div>
+                <img src="/wdd230/bountiful_foods/images/mix-fruit.webp">
             </div>
-            <h4 id="weather-descrip"></h4>
-            <p>Wind Speed: <span id="my-wind"></span></p>
-            <p>Wind Chill: <span id="wind-chill"></span></p>
-            <p>Humidity: <span id="humidity"></span></p>
+            <div class="stored-orders"></div>
+
         </section>
 
 
@@ -137,6 +134,7 @@
                 <p>+(54) 9 3624 000000</p>
                 <a href="contact.html#maps">
                     <p>📍 location Map </p>
+
                 </a>
             </div>
         </div>
