--- a/bountiful_foods/fresh.html
+++ b/bountiful_foods/fresh.html
@@ -28,8 +28,8 @@
         </div>
         <nav>
             <ul id="primary-nav">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="fresh.html">Fresh</a></li>
+                <li ><a href="index.html">Home</a></li>
+                <li class="active"><a href="fresh.html">Fresh</a></li>
                 <li><a href="about.html">About Us</a></li>
             </ul>
         </nav>
@@ -118,7 +118,7 @@
                     </label>
                     <label> Special Instruction (Optional) <textarea name="businessDescription" rows="4" cols="50">
                 </textarea></label>
-                    <input type="hidden" name="date" id="date">
+                    <p id="date">
                 </fieldset>
                 <label><input type="submit" name="submitBtn" value="Send my Order" class="submit-btn"></label>
             </form>
