--- a/bountiful_foods/index.html
+++ b/bountiful_foods/index.html
@@ -87,17 +87,7 @@
         </section>
         <section class="weather-section">
             <div class="current-weather">
-                <h2> Current Weather</h2>
-                <div class="weather">
-                    <img id="weather-img">
-                    <div class="temp"><span id="my-temp"></span></div>
-                </div>
-                <h4 id="weather-descrip"></h4>
-                <div class="weather-wind">
-                    <p>Wind Speed: <span id="my-wind"></span></p>
-                    <p>Wind Chill: <span id="wind-chill"></span></p>
-                </div>
-                <p>Humidity: <span id="humidity"></span></p>
+                
             </div>
             <div id="forecast">
 
@@ -108,7 +98,7 @@
             <h2>Your Orders</h2>
 
             <div class="weather">
-                <img src="/wdd230/bountiful_foods/images/mix-fruit.webp">
+                <img src="/wdd230/bountiful_foods/images/mix-fruit.webp" alt="Fruit Juices Image">
             </div>
             <div class="stored-orders"></div>
 
