hero section changing

--- a/bountiful_foods/index.html
+++ b/bountiful_foods/index.html
@@ -42,7 +42,7 @@
             <a href="https://www.linkedin.com/in/josuebcenturion/" target="_blank"><img
                     src="/wdd230/chamber/images/linkedin.png" alt="Linkedin icon"></a>
         </div>
-        <div class="btn"> <button id="hamburger-btn"><span>&#9776;</span><span>x</span></button></div>
+        <div class="btns"> <button id="hamburger-btn"><span>&#9776;</span><span>x</span></button></div>
         <div class="current-date">
             <p><span id="banner">Welcome, Thank you for visiting Us!<span class="visits"></span></span></p>
         </div>
@@ -52,7 +52,33 @@
         </div>
     </header>
     <main>
-        <section class="hero-section">
+        <!-- Slider container -->
+<div class="slider">
+    <!-- slide 1 -->
+    <div class="slide">
+      <img src="https://source.unsplash.com/random?vegetables" alt="" />
+    </div>
+  
+    <!-- slide 2 -->
+    <div class="slide">
+      <img src="https://source.unsplash.com/random?fruit, icecream" alt="" />
+    </div>
+  
+    <!-- slide 3 -->
+    <div class="slide">
+      <img src="https://source.unsplash.com/random?juice" alt="" />
+    </div>
+  
+    <!-- slide 4 -->
+    <div class="slide">
+      <img src="https://source.unsplash.com/random?milkshake" alt="" />
+    </div>
+  
+    <!-- Control buttons -->
+    <button class="btn btn-next"> ➡️  </button>
+    <button class="btn btn-prev"> ⬅️ </button>
+  </div>
+        <!-- <section class="hero-section">
             <div class="welcome-message">
                 <h2>Welcome, We're Bountiful Foods </h2>
             </div>
@@ -65,7 +91,7 @@
                 <source media="(min-width: 32em)" srcset="/wdd230/lesson-12/images/hero.jpg">
                 <img src="/wdd230/lesson-12/images/hero.jpg" alt="Hero Image">
             </picture>
-        </section>
+        </section> -->
         <div id="spotlights">
 
         </div>
@@ -85,14 +111,14 @@
                 <img src="/wdd230/lesson-12/images/company_image.jpg" alt="Hero Image">
             </picture>
         </section>
-        <section class="weather-section">
+        <div class="weather-section">
             <div class="current-weather">
                 
             </div>
             <div id="forecast">
 
             </div>
-        </section>
+        </div>
         <section class="orders-card">
 
             <h2>Your Orders</h2>
