--- a/bountiful_foods/about.html
+++ b/bountiful_foods/about.html
@@ -3,6 +3,8 @@
 
     <head>
         <meta charset="utf-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Josue Centurion">
         <meta name="description"
             content="This is the Join page of the project chamber of commerce for the course WDD230 (BYU - Idaho). It presents a form that the user can submit to apply and be part of this organization">
