improving design and styling

--- a/bountiful_foods/index.html
+++ b/bountiful_foods/index.html
@@ -53,38 +53,39 @@
     </header>
     <main>
         <!-- Slider container -->
-<div class="slider">
-    <!-- slide 1 -->
-    <div class="slide">
-      <img src="https://source.unsplash.com/random?vegetables" alt="" />
-    </div>
-  
-    <!-- slide 2 -->
-    <div class="slide">
-      <img src="https://source.unsplash.com/random?fruit, icecream" alt="" />
-    </div>
-  
-    <!-- slide 3 -->
-    <div class="slide">
-      <img src="https://source.unsplash.com/random?juice" alt="" />
-    </div>
-  
-    <!-- slide 4 -->
-    <div class="slide">
-      <img src="https://source.unsplash.com/random?milkshake" alt="" />
-    </div>
-  
-    <!-- Control buttons -->
-    <button class="btn btn-next"> ➡️  </button>
-    <button class="btn btn-prev"> ⬅️ </button>
-  </div>
+        <div class="slider">
+            <!-- slide 1 -->
+            <div class="slide">
+                <img src="https://source.unsplash.com/random?natural juice" alt="" />
+            </div>
+
+            <!-- slide 2 -->
+            <div class="slide">
+                <img src="https://source.unsplash.com/random?fruit, icecream" alt="" />
+            </div>
+
+            <!-- slide 3 -->
+            <div class="slide">
+                <img src="https://source.unsplash.com/random?juice" alt="" />
+            </div>
+
+            <!-- slide 4 -->
+            <div class="slide">
+                <img src="https://source.unsplash.com/random?milkshake" alt="" />
+            </div>
+
+            <!-- Control buttons -->
+            <button class="btn btn-next"> ➡️ </button>
+            <button class="btn btn-prev"> ⬅️ </button>
+             <div class="join-btn" onclick="window.location.href='fresh.html';">
+                <h2>Prepare my Mix 🍸🍹</h2>
+            </div>
+        </div>
         <!-- <section class="hero-section">
             <div class="welcome-message">
                 <h2>Welcome, We're Bountiful Foods </h2>
             </div>
-            <div class="join-btn" onclick="window.location.href='fresh.html';">
-                <h2>Make your Drink Mix</h2>
-            </div>
+           
             <picture>
 
                 <source media="(min-width: 64em)" srcset="/wdd230/lesson-12/images/hero.jpg">
@@ -98,11 +99,14 @@
         <section class="company-info-section">
 
             <div class="company-info-paragraph">
-                <h2>lorem ipsum dolor sit</h2>
-                <p>orem ipsum dolor sit amet consectetur
-                    Ornare metus accumsan integer fermentum justo blandit conubia molestie duis torquent pharetra
-                    lobortis dictum, eleifend primis donec euismod.
+                <h2>Our Offices</h2>
+                <p>We believe in keeping and improving our Natural Landscapes, that's what we reflect in our offices'
+                    design. Let's keep our World the best that we can, it's the only one that we have.
                 </p>
+                <a href="about.html#contact-page">
+                    <p> ⛺​ Know more about Us! ​🏤​</p>
+
+                </a>
             </div>
             <picture>
 
@@ -113,7 +117,7 @@
         </section>
         <div class="weather-section">
             <div class="current-weather">
-                
+
             </div>
             <div id="forecast">
 
@@ -135,29 +139,29 @@
     <footer>
         <div class="footer-main">
             <div class="footer-left">
-                <div class="footer-image">
-                    <a href="index.html"><img src="/wdd230/lesson-12/images/logo-footer.png" alt="Chamber logo"></a>
-                </div>
                 <div class="footer-info">
-                    <p><strong> Argentine Chamber of Commerce </strong></p>
-                    <a href="contact.html#contact-form">
+                    <p><strong>Bountiful Foods </strong></p>
+                    <a href="about.html">
                         <p>info</p>
                     </a>
                 </div>
+                <div class="footer-image">
+                    <a href="index.html"><img src="/wdd230/lesson-12/images/logo-footer.png" alt="Chamber logo"></a>
+                </div>
             </div>
             <div class="footer-right">
-                <p>www.argchamber.org</p>
+                <p>www.bountifrut.com</p>
                 <p>+(54) 9 3624 000000</p>
-                <a href="contact.html#maps">
-                    <p>📍 location Map </p>
+                <a href="about.html#maps">
+                    <p>🗺️ location Map </p>
 
                 </a>
             </div>
         </div>
         <hr>
         <div class="footer-sub">
-            <p>&copy;<span id="year"></span> Argentine Chamber |<strong> Josue Benjamin Centurion | </strong> WDD230
-                Project |
+            <p>&copy;<span id="year"></span> Bountiful Foods |<strong> Josue Benjamin Centurion | </strong> WDD230
+                Final Project |
             <p id="updated"></p>
 
             <p> || Weather data provided by <a href="https://openweathermap.org">OpenWeather</a>||</p>
