--- a/bountiful_foods/about.html
+++ b/bountiful_foods/about.html
@@ -43,7 +43,7 @@
             <a href="https://www.linkedin.com/in/josuebcenturion/" target="_blank"><img
                     src="/wdd230/chamber/images/linkedin.png" alt="Linkedin icon"></a>
         </div>
-        <div class="btn"> <button id="hamburger-btn"><span>&#9776;</span><span>x</span></button></div>
+        <div class="btns"> <button id="hamburger-btn"><span>&#9776;</span><span>x</span></button></div>
         <div class="current-date">
             <p><span id="banner">Welcome, Thank you for visiting Us!<span class="visits"></span></span></p>
         </div>
@@ -108,28 +108,29 @@
     <footer>
         <div class="footer-main">
             <div class="footer-left">
-                <div class="footer-image">
-                    <a href="index.html"><img src="/wdd230/lesson-12/images/logo-footer.png" alt="Chamber logo"></a>
-                </div>
                 <div class="footer-info">
-                    <p><strong> Argentine Chamber of Commerce </strong></p>
-                    <a href="contact.html#contact-form">
+                    <p><strong>Bountiful Foods </strong></p>
+                    <a href="about.html">
                         <p>info</p>
                     </a>
                 </div>
+                <div class="footer-image">
+                    <a href="index.html"><img src="/wdd230/lesson-12/images/logo-footer.png" alt="Chamber logo"></a>
+                </div>
             </div>
             <div class="footer-right">
-                <p>www.argchamber.org</p>
+                <p>www.bountifrut.com</p>
                 <p>+(54) 9 3624 000000</p>
-                <a href="contact.html#maps">
-                    <p>📍 location Map </p>
+                <a href="about.html#maps">
+                    <p>🗺️ location Map </p>
+
                 </a>
             </div>
         </div>
         <hr>
         <div class="footer-sub">
-            <p>&copy;<span id="year"></span> Argentine Chamber |<strong> Josue Benjamin Centurion | </strong> WDD230
-                Project |
+            <p>&copy;<span id="year"></span> Bountiful Foods |<strong> Josue Benjamin Centurion | </strong> WDD230
+                Final Project |
             <p id="updated"></p>
 
             <p> || Weather data provided by <a href="https://openweathermap.org">OpenWeather</a>||</p>
