--- a/bountiful_foods/fresh.html
+++ b/bountiful_foods/fresh.html
@@ -130,32 +130,32 @@
         <h2>Total Orders</h2>
 
     </div>
-
     <footer>
         <div class="footer-main">
             <div class="footer-left">
-                <div class="footer-image">
-                    <a href="index.html"><img src="/wdd230/lesson-12/images/logo-footer.png" alt="Chamber logo"></a>
-                </div>
                 <div class="footer-info">
-                    <p><strong> Argentine Chamber of Commerce </strong></p>
-                    <a href="contact.html#contact-form">
+                    <p><strong>Bountiful Foods </strong></p>
+                    <a href="about.html">
                         <p>info</p>
                     </a>
                 </div>
+                <div class="footer-image">
+                    <a href="index.html"><img src="/wdd230/lesson-12/images/logo-footer.png" alt="Chamber logo"></a>
+                </div>
             </div>
             <div class="footer-right">
-                <p>www.argchamber.org</p>
+                <p>www.bountifrut.com</p>
                 <p>+(54) 9 3624 000000</p>
-                <a href="contact.html#maps">
-                    <p>📍 location Map </p>
+                <a href="about.html#maps">
+                    <p>🗺️ location Map </p>
+
                 </a>
             </div>
         </div>
         <hr>
         <div class="footer-sub">
-            <p>&copy;<span id="year"></span> Argentine Chamber |<strong> Josue Benjamin Centurion | </strong> WDD230
-                Project |
+            <p>&copy;<span id="year"></span> Bountiful Foods |<strong> Josue Benjamin Centurion | </strong> WDD230
+                Final Project |
             <p id="updated"></p>
 
             <p> || Weather data provided by <a href="https://openweathermap.org">OpenWeather</a>||</p>
