adding styling even more

--- a/bountiful_foods/about.html
+++ b/bountiful_foods/about.html
@@ -57,9 +57,9 @@
     </div>
     <div class="join-page" id="contact-page">
         <div class="membership-div">
-            <h2 class="heading-join">Argentine Chamber of Commerce </h2>
+            <h2 class="heading-join">Argentine Chamber of Commerce 🌍​​​🏖️​👨‍👩‍👧‍👦​🏪​🚚 </h2>
             <div>
-                <img src="/wdd230/chamber/images/chamber.webp" alt="">
+                <img src="/wdd230/bountiful_foods/images/about_us_image.webp" alt="">
             </div>
             <ul>
                 <li><strong>Address:</strong> Av. Leandro N. Alem 36</li>
