--- a/bountiful_foods/index.html
+++ b/bountiful_foods/index.html
@@ -100,8 +100,8 @@
 
             <div class="company-info-paragraph">
                 <h2>Our Offices</h2>
-                <p>We believe in keeping and improving our Natural Landscapes, that's what we reflect in our offices'
-                    design. Let's keep our World the best that we can, it's the only one that we have.
+                <p>We believe in keeping and improving our Natural Landscapes 🏞️​, that's what we reflect in our offices'
+                    design. Let's keep our World 🌍​ the best that we can, it's the only one that we have.
                 </p>
                 <a href="about.html#contact-page">
                     <p> ⛺​ Know more about Us! ​🏤​</p>
