--- a/bountiful_foods/fresh.html
+++ b/bountiful_foods/fresh.html
@@ -89,7 +89,7 @@
         </div> -->
     <main class="main-join">
         <div class="heading-join">
-            <h2> Prepare your Mix </h2>
+            <h2>🏄👓​ Prepare your Mix 🛍️​🔆​</h2>
         </div>
         <div class="form-join">
             <form method="get" id="order">
