optimazing images and layout

--- a/bountiful_foods/fresh.html
+++ b/bountiful_foods/fresh.html
@@ -24,7 +24,7 @@
 
     <header>
         <div class="name">
-            <a href="index.html"> <img src="/wdd230/lesson-12/images/logo.png" alt="Bountiful Foods logo"></a>
+            <a href="index.html"> <img src="/wdd230/lesson-12/images/logo.webp" alt="Bountiful Foods logo"></a>
             <h1>Bountiful Foods</h1>
         </div>
         <nav>
@@ -140,7 +140,7 @@
                     </a>
                 </div>
                 <div class="footer-image">
-                    <a href="index.html"><img src="/wdd230/lesson-12/images/logo-footer.png" alt="Chamber logo"></a>
+                    <a href="index.html"><img src=" /wdd230/lesson-12/images/logo-footer.webp" alt="Chamber logo"></a>
                 </div>
             </div>
             <div class="footer-right">
