--- a/bountiful_foods/index.html
+++ b/bountiful_foods/index.html
@@ -24,7 +24,7 @@
 
     <header>
         <div class="name">
-            <a href="index.html"> <img src="/wdd230/lesson-12/images/logo.png" alt="Bountiful Foods logo"></a>
+            <a href="index.html"> <img src="/wdd230/lesson-12/images/logo.webp" alt="Bountiful Foods logo"></a>
             <h1>Bountiful Foods</h1>
         </div>
         <nav>
@@ -109,10 +109,9 @@
                 </a>
             </div>
             <picture>
-
-                <source media="(min-width: 64em)" srcset="/wdd230/lesson-12/images/company_image.jpg">
-                <source media="(min-width: 32em)" srcset="/wdd230/lesson-12/images/company_image.jpg">
-                <img src="/wdd230/lesson-12/images/company_image.jpg" alt="Hero Image">
+                <source media="(min-width: 64em)" srcset="/wdd230/lesson-12/images/company_image_large.webp">
+                <source media="(min-width: 32em)" srcset="/wdd230/lesson-12/images/company_image_medium.webp">
+                <img src="/wdd230/lesson-12/images/company_image_small.webp" alt="Company Image">
             </picture>
         </section>
         <div class="weather-section">
@@ -128,7 +127,10 @@
             <h2>Your Orders</h2>
 
             <div class="weather">
-                <img src="/wdd230/bountiful_foods/images/mix-fruit.webp" alt="Fruit Juices Image">
+                <picture>
+                    <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/mix-fruit.webp">
+                <img src="/wdd230/lesson-12/images/mix-fruit_small_medium.webp" alt="Fruit Juices Image">
+            </picture>
             </div>
             <div class="stored-orders"></div>
 
@@ -146,7 +148,7 @@
                     </a>
                 </div>
                 <div class="footer-image">
-                    <a href="index.html"><img src="/wdd230/lesson-12/images/logo-footer.png" alt="Chamber logo"></a>
+                    <a href="index.html"><img src=" /wdd230/lesson-12/images/logo-footer.webp" alt="Chamber logo"></a>
                 </div>
             </div>
             <div class="footer-right">
