--- a/lesson-12/color-shceme.html
+++ b/lesson-12/color-shceme.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <img src="/wdd230/lesson-12/images/logo.png" href="index.html" alt="Chamber logo">
+        <img src="/wdd230/lesson-12/images/logo.webp" href="index.html" alt="Chamber logo">
         <div class="name">
              <h1>Bountiful Foods</h1>        </div>
     </header>
