--- a/bountiful_foods/index.html
+++ b/bountiful_foods/index.html
@@ -52,22 +52,38 @@
         <div class="slider">
             <!-- slide 1 -->
             <div class="slide">
-                <img src="https://source.unsplash.com/random?natural juice" alt="" />
+                <picture>
+                <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-1-large.webp">
+                <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-1-medium.webp">
+                <img src="/wdd230/bountiful_foods/images/hero-1-small.webp" alt="" />
+                </picture>
             </div>
 
             <!-- slide 2 -->
             <div class="slide">
-                <img src="https://source.unsplash.com/random?fruit, icecream" alt="" />
+                <picture>
+                    <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-1-large.webp">
+                    <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-1-medium.webp">
+                    <img src="/wdd230/bountiful_foods/images/hero-1-small.webp" alt="" />
+                    </picture>
             </div>
 
             <!-- slide 3 -->
             <div class="slide">
-                <img src="https://source.unsplash.com/random?juice" alt="" />
+                <picture>
+                    <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-1-large.webp">
+                    <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-1-medium.webp">
+                    <img src="/wdd230/bountiful_foods/images/hero-1-small.webp" alt="" />
+                    </picture>
             </div>
 
             <!-- slide 4 -->
             <div class="slide">
-                <img src="https://source.unsplash.com/random?milkshake" alt="" />
+                <picture>
+                    <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-1-large.webp">
+                    <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-1-medium.webp">
+                    <img src="/wdd230/bountiful_foods/images/hero-1-small.webp" alt="" />
+                    </picture>
             </div>
 
             <!-- Control buttons -->
