--- a/bountiful_foods/about.html
+++ b/bountiful_foods/about.html
@@ -53,7 +53,7 @@
     </div>
     <div class="join-page" id="contact-page">
         <div class="membership-div">
-            <h2 class="heading-join">Argentine Chamber of Commerce 🌍​​​🏖️​👨‍👩‍👧‍👦​🏪​🚚 </h2>
+            <h2 class="heading-join">🌍​​​🏖️ ​Bountiful Foods 👨‍👩‍👧‍👦​​🚚 </h2>
             <div>
                 <img src="/wdd230/bountiful_foods/images/about_us_image.webp" alt="">
             </div>
