--- a/bountiful_foods/thanks.html
+++ b/bountiful_foods/thanks.html
@@ -49,10 +49,10 @@
     <main class="main-thanks">
         
         <div class="thanks-div">
-        <p id="success-msg">Message Successfully Sent</p>           
+        <p id="success-msg">💬🎇 ​​​Message Successfully Sent 📧​📨</p>           
         <h1 id="message">Thanks for Contacting Us</h1>
         <p id="information">We will reach you in the next 24hs. We <strong> highly appreciate your interest</strong>  </p>
-      <button class="submit-btn"  onclick="window.location.href='index.html';" > Go back Home </button> 
+      <button class="submit-btn"  onclick="window.location.href='index.html';" > Go back Home 🏡​</button> 
     </div>
     </main>
 
