optimazing and adjusting to fulfill standards

--- a/bountiful_foods/about.html
+++ b/bountiful_foods/about.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Josue Centurion">
         <meta name="description"
-            content="This is the Join page of the project chamber of commerce for the course WDD230 (BYU - Idaho). It presents a form that the user can submit to apply and be part of this organization">
+            content="This is the About page of the Bountiful Foods Website, for the course WDD230 (BYU - Idaho). It presents a form that the user can submit to contact to this bussiness and get more information about the products and promotions">
     <link rel="icon" href="/wdd230/lesson-12/favicon_bountiful_food.ico">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="/wdd230/bountiful_foods/css/base.css">
@@ -26,9 +26,9 @@
         </div>
         <nav>
             <ul id="primary-nav">
-                <li class="active"><a href="index.html">Home</a></li>
+                <li ><a href="index.html">Home</a></li>
                 <li><a href="fresh.html">Fresh</a></li>
-                <li><a href="about.html">About Us</a></li>
+                <li class="active"><a href="about.html">About Us</a></li>
             </ul>
         </nav>
         <div class="icons">
@@ -60,10 +60,10 @@
             <ul>
                 <li><strong>Address:</strong> Av. Leandro N. Alem 36</li>
                 <li><strong>Telephone:</strong> (54-11) 5300-9</li>
-                <li><strong>Email:</strong> argchamber@commerce.com</li>
+                <li><strong>Email:</strong> bountifruit@commerce.com</li>
             </ul>
     
-            <h3>Economic Development/Opportunity</h3>
+            <h3>Business Approach / Particular Clients </h3>
             <ul>
                 <li>Benjamin Centurion</li>
                 <li>Monday – Thursday: 9:00 a.m. to 4:30 p.m.</li>
