--- a/bountiful_foods/fresh.html
+++ b/bountiful_foods/fresh.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="This is the Join page of the project chamber of commerce for the course WDD230 (BYU - Idaho). It presents a form that the user can submit to apply and be part of this organization">
+        content="This is the Fresh page of the final project for the course WDD230 (BYU - Idaho). It presents a form that the user can submit to order a drink, with the option to cancel the order.">
     <link rel="icon" href="/wdd230/lesson-12/favicon_bountiful_food.ico">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="/wdd230/bountiful_foods/css/base.css">
@@ -68,13 +68,17 @@
 
                     <label class="top"> Prepare your Mix
                         <select name="fruit-options-1" id="select-1" required>
-
+                            <option value="" selected disabled > Select One Option </option>
                         </select>
+                    </label>
+                    <label class="top">
                         <select name="fruit-options-2" id="select-2" required>
-
+                            <option value="" selected disabled > Select One Option </option>
                         </select>
+                    </label>
+                    <label class="top">
                         <select name="fruit-options-3" id="select-3" required>
-
+                            <option value="" selected disabled > Select One Option </option>
                         </select>
                     </label>
                     <label> Special Instruction (Optional) <textarea name="businessDescription" rows="4" cols="50">
