--- a/bountiful_foods/index.html
+++ b/bountiful_foods/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="This is the Chamber of Commerce Website. It's a project assignment for the WDD230 Course at BYU - Idaho. In this project is applied the principle of responsiveness, white spaces, good contrast, and consistency in design and layout. It contains multiple pages, utilizing HTML, CSS, and Javascript. ">
+        content="This is the Bountiful Foods Website. It's the final project assignment for the WDD230 Course at BYU - Idaho. In this project is applied the principle of responsiveness, white spaces, good contrast, and consistency in design and layout. It contains multiple pages, utilizing HTML, CSS, and Javascript.">
     <link rel="icon" href="/wdd230/lesson-12/favicon_bountiful_food.ico">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="/wdd230/bountiful_foods/css/base.css">
@@ -55,7 +55,7 @@
                 <picture>
                 <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-1-large.webp">
                 <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-1-medium.webp">
-                <img src="/wdd230/bountiful_foods/images/hero-1-small.webp" alt="" />
+                <img src="/wdd230/bountiful_foods/images/hero-1-small.webp" alt="citrus image" />
                 </picture>
             </div>
 
@@ -64,7 +64,7 @@
                 <picture>
                     <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-2-large.webp">
                     <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-2-medium.webp">
-                    <img src="/wdd230/bountiful_foods/images/hero-2-small.webp" alt="" />
+                    <img src="/wdd230/bountiful_foods/images/hero-2-small.webp" alt="fruits milkshake" />
                     </picture>
             </div>
 
@@ -73,7 +73,7 @@
                 <picture>
                     <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-3-large.webp">
                     <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-3-medium.webp">
-                    <img src="/wdd230/bountiful_foods/images/hero-3-small.webp" alt="" />
+                    <img src="/wdd230/bountiful_foods/images/hero-3-small.webp" alt="basket with fruits" />
                     </picture>
             </div>
 
@@ -82,7 +82,7 @@
                 <picture>
                     <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-4-large.webp">
                     <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-4-medium.webp">
-                    <img src="/wdd230/bountiful_foods/images/hero-4-small.webp" alt="" />
+                    <img src="/wdd230/bountiful_foods/images/hero-4-small.webp" alt="fruit icecream" />
                     </picture>
             </div>
 
