--- a/bountiful_foods/thanks.html
+++ b/bountiful_foods/thanks.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Josue Centurion">
         <meta name="description"
-            content="This is the Join page of the project chamber of commerce for the course WDD230 (BYU - Idaho). It presents a form that the user can submit to apply and be part of this organization">
+            content="This is the Thanks page of the project bountiful foods for the course WDD230 (BYU - Idaho). It shows a thanks message after the message is sent">
     <link rel="icon" href="/wdd230/lesson-12/favicon_bountiful_food.ico">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="/wdd230/bountiful_foods/css/base.css">
@@ -24,7 +24,7 @@
         </div>
         <nav>
             <ul id="primary-nav">
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="fresh.html">Fresh</a></li>
                 <li><a href="about.html">About Us</a></li>
             </ul>
